# prompt-shield

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  .prompt-shield-ignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_CONTEXT.md  README.md  ROADMAP.md  SECURITY.md  demo.py  docker-compose.yml  mkdocs.yml  pyproject.toml  test_all_features.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_detector_proposal.yml
.github/actions/prompt-shield-scan/: action.yml  scan.py
.github/workflows/: ci.yml  prompt-shield.yml  release.yml  stale.yml
deploy/helm/prompt-shield/: .helmignore  Chart.yaml  README.md  values.yaml
docs/: _config.yml  agentic-security.md  architecture.md  changelog.md  configuration.md  design-notes-v0.5.0.md  detectors.md  docker.md  github-action.md  index.md  integrations.md  pre-commit.md  quickstart.md  research-post-cross-domain-techniques.md  self-learning.md  writing-detectors.md
docs/grafana/: README.md  prompt-shield-dashboard.json
docs/papers/: README.md  UPLOAD-design-notes-v0.5.0.md  build_design_notes_v0_5_0.py  build_v2_docx.py  build_v3_docx.py  cross-domain-techniques-v2.docx  cross-domain-techniques-v3.docx  design-notes-v0.5.0.docx
docs/papers/evaluation/: ANALYSIS.md  agentdojo_tasks.json  build_indirect_injection_benchmark.py  d028_public_datasets.json  d028_public_datasets.md  fatigue_probing_campaign.md  garak.md  garak_regex_only.json  harmbench.json  indirect_injection_samples.jsonl  injecagent.md  injecagent_regex_only.json  liu_attackers.md  run_public_datasets.py  threshold_sweep.csv  v041_public_datasets.json  v041_public_datasets.md
examples/: demo.py  demo_gif.py  demo_record.py  quickstart.py
examples/agentic_demo/: README.md  app.py  mcp_server.py
examples/custom_detector/: README.md  my_detector.py
examples/fastapi_demo/: README.md  app.py
examples/langchain_demo/: README.md  app.py
examples/self_learning_demo/: README.md  app.py
plugins/awesome-lists/: SUBMISSIONS.md
plugins/dify/: README.md  manifest.yaml  privacy.md  requirements.txt
plugins/dify/provider/: prompt_shield.py  prompt_shield.yaml
plugins/dify/tools/: output_scan.py  output_scan.yaml  pii_redact.py  pii_redact.yaml  pii_scan.py  pii_scan.yaml  scan.py  scan.yaml
plugins/n8n/: README.md  package.json  tsconfig.json
plugins/n8n/credentials/: PromptShieldApi.credentials.ts
plugins/pypi-alias/: README.md  pyproject.toml
posts/: devto.md  hackernews.md  linkedin.md  medium.md  reddit-localllama.md  reddit-machinelearning.md  twitter.md
src/prompt_shield/: __init__.py  __main__.py  api.py  cli.py  engine.py  exceptions.py  hooks.py  models.py  registry.py  utils.py
src/prompt_shield/alerting/: __init__.py  webhook.py
src/prompt_shield/benchmarks/: __init__.py  datasets.py  metrics.py  runner.py  sample_data.json
src/prompt_shield/canary/: __init__.py  leak_detector.py  token_generator.py  watermark.py
src/prompt_shield/compliance/: __init__.py  mitre_atlas_mapping.py  owasp_mapping.py
src/prompt_shield/config/: __init__.py  default.yaml
src/prompt_shield/decoders/: __init__.py  preprocessor.py
src/prompt_shield/detectors/: __init__.py  _d027_features.py  _d028_attack_sequences.py  _d028_substitution_matrix.py  base.py  d002_role_hijack.py  (+32 more)
tests/: baseline_v0.3.3.txt  benchmark_comparison.py  benchmark_garak.py  benchmark_harmbench.py  benchmark_injecagent.py  benchmark_liu_attackers.py  benchmark_public_datasets.py  benchmark_realistic.py  conftest.py  regression_check.py  test_api.py  test_cli.py  test_config.py  test_engine.py  test_hooks.py  test_parallel.py  test_registry.py  threshold_sweep.py
tests/alerting/: test_webhook.py
tests/benchmarks/: test_datasets.py  test_metrics.py  test_runner.py
tests/canary/: test_leak_detector.py  test_token_generator.py  test_watermark.py
tests/compliance/: test_mitre_atlas_mapping.py  test_owasp_mapping.py
tests/decoders/: test_preprocessor.py
tests/detectors/: test_d001_system_prompt_extraction.py  test_d002_role_hijack.py  test_d003_instruction_override.py  test_d004_prompt_leaking.py  test_d005_context_manipulation.py  test_d006_multi_turn_escalation.py  test_d007_task_deflection.py  test_d008_base64_payload.py  test_d009_rot13_substitution.py  test_d010_unicode_homoglyph.py  test_d011_whitespace_injection.py  test_d012_markdown_html_injection.py  test_d013_data_exfiltration.py  test_d014_tool_function_abuse.py  test_d015_rag_poisoning.py  test_d016_url_injection.py  test_d017_hypothetical_framing.py  test_d018_academic_pretext.py  test_d019_dual_persona.py  test_d020_token_smuggling.py  test_d021_vault_similarity.py  test_d022_semantic_classifier.py  test_d024_multilingual_injection.py  test_d025_multi_encoding.py  test_d026_denial_of_wallet.py  test_d027_stylometric_discontinuity.py  test_d028_sequence_alignment.py  test_d029_many_shot_structural.py  test_d030_custom_rules.py  test_d031_language_enforcement.py  test_d032_topic_enforcement.py  test_d033_topic_drift.py
tests/fatigue/: test_engine_integration.py  test_tracker.py
tests/fixtures/: tool_result_attacks.py
tests/integrations/: test_agent_guard.py  test_anthropic_tool_results.py  test_anthropic_wrapper.py  test_crewai_guard.py  test_fastapi_middleware.py  test_haystack_component.py  test_langchain_on_tool_end.py  test_llamaindex_retrieved_nodes.py  test_mcp.py  test_openai_wrapper.py  test_pydantic_ai_guard.py
tests/normalization/: test_pipeline.py
tests/observability/: test_metrics.py
tests/output_scanners/: test_bias_fairness.py  test_code_injection.py  test_hallucination.py  test_output_pii.py  test_prompt_leakage.py  test_relevance.py  test_schema_validation.py  test_sentiment.py  test_toxicity.py
tests/persistence/: test_database.py
tests/ratelimit/: test_limiter.py
tests/redteam/: test_runner.py
tests/signatures/: test_client.py
tests/tool_guard/: test_guard.py  test_models.py  test_scan_tool_result.py  test_taxonomy.py  test_taxonomy_precision.py
(+91 files in other folders)
