[project]
name = "prompt-shield-ai"
version = "0.4.0"
description = "Self-learning prompt injection detection engine for LLM applications"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "prompt-shield contributors" }]
keywords = ["llm", "security", "prompt-injection", "ai-safety", "firewall", "self-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "regex>=2023.0",
    "sentence-transformers>=2.0",
    "chromadb>=0.5",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
flask = ["flask>=2.0"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
django = ["django>=4.0"]
crewai = ["crewai>=0.70", "crewai-tools>=0.12"]
mcp = ["mcp>=1.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
ml = [
    "transformers>=4.30",
    "optimum[onnxruntime]>=1.12",
]
all = ["prompt-shield-ai[fastapi,flask,langchain,llamaindex,django,crewai,mcp,openai,anthropic,ml]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
    "httpx>=0.24",
    "mkdocs-material>=9.0",
]

[project.scripts]
prompt-shield = "prompt_shield.cli:main"
prompt-shield-hook = "prompt_shield.hooks:prompt_shield_hook"
prompt-shield-pii-hook = "prompt_shield.hooks:prompt_shield_pii_hook"

[project.entry-points."prompt_shield.detectors"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_shield"]

[tool.ruff]
target-version = "py310"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Compliance-mapping data: URL strings and OWASP descriptions are data,
# not code — wrapping them hurts readability and loses grep-ability.
"src/prompt_shield/compliance/owasp_mapping.py" = ["E501"]
# Attack-sequence database is a literal data table.
"src/prompt_shield/detectors/_d028_attack_sequences.py" = ["E501"]
# Built-in detectors embed long regex patterns and human-readable
# descriptions that are clearer on a single line than wrapped.
"src/prompt_shield/detectors/d0*.py" = ["E501"]
# Benchmarks print long report lines that are easier to read unwrapped.
"tests/benchmark_*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["prompt_shield"]
mypy_path = "src"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "prompt_shield.integrations.*",
    "prompt_shield.vault.*",
    "prompt_shield.detectors.d022_semantic_classifier",
]
disallow_any_generics = false
warn_return_any = false
disable_error_code = ["arg-type", "misc", "assignment", "return-value", "index", "list-item", "unused-ignore"]

# FastAPI handlers rely on response_model= for schema; return type annotations
# on each async def are boilerplate. Benchmarks/runner call into a loose
# `engine: object` parameter (PromptShieldEngine) that mypy can't narrow.
[[tool.mypy.overrides]]
module = [
    "prompt_shield.api",
    "prompt_shield.benchmarks.runner",
]
disable_error_code = ["no-untyped-def", "no-untyped-call"]

# crewai_tools exposes BaseTool differently between versions; our integration
# already gracefully falls back via try/except ImportError.
[[tool.mypy.overrides]]
module = ["crewai_tools", "crewai_tools.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "prompt_shield.config.*",
    "prompt_shield.persistence.*",
    "prompt_shield.feedback.*",
    "prompt_shield.registry",
]
disallow_any_generics = false
warn_return_any = false
disable_error_code = ["arg-type", "no-any-return", "type-arg", "return-value", "assignment", "import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=prompt_shield --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["prompt_shield"]
branch = true

[tool.coverage.report]
fail_under = 60
omit = [
    "src/prompt_shield/vault/*",
    "src/prompt_shield/integrations/django_middleware.py",
    "src/prompt_shield/integrations/flask_middleware.py",
    "src/prompt_shield/integrations/llamaindex_handler.py",
]
