[project]
name = "prompt-shield-ai"
version = "0.7.1"
description = "Self-learning prompt injection detection engine for LLM applications"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "prompt-shield contributors" }]
keywords = [
    "llm", "llm-security", "llm-firewall", "prompt-injection", "prompt-injection-detection",
    "ai-safety", "guardrails", "firewall", "self-learning", "threat-intelligence",
    "federated-feed", "langchain", "llamaindex", "crewai", "fastapi",
    "deberta", "smith-waterman", "stylometric", "pii-detection", "red-team",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "regex>=2023.0",
    "sentence-transformers>=2.0",
    "chromadb>=0.5",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
flask = ["flask>=2.0"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
haystack = ["haystack-ai>=2.0"]
pydantic-ai = ["pydantic-ai>=0.0.10"]
django = ["django>=4.0"]
crewai = ["crewai>=0.70", "crewai-tools>=0.12"]
mcp = ["mcp>=1.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
ml = [
    "transformers>=4.30",
    "optimum[onnxruntime]>=1.12",
]
# v0.5.0 — pluggable extras for the new lazy-loaded features.
observability = ["prometheus_client>=0.17"]
sentiment = ["vaderSentiment>=3.3"]
language = ["langdetect>=1.0"]
all = ["prompt-shield-ai[fastapi,flask,langchain,llamaindex,haystack,pydantic-ai,django,crewai,mcp,openai,anthropic,ml,observability,sentiment,language]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
    "httpx>=0.24",
    "mkdocs-material>=9.0",
]

[project.scripts]
prompt-shield = "prompt_shield.cli:main"
prompt-shield-hook = "prompt_shield.hooks:prompt_shield_hook"
prompt-shield-pii-hook = "prompt_shield.hooks:prompt_shield_pii_hook"

[project.entry-points."prompt_shield.detectors"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_shield"]

[tool.ruff]
target-version = "py310"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Compliance-mapping data: URL strings and OWASP descriptions are data,
# not code — wrapping them hurts readability and loses grep-ability.
"src/prompt_shield/compliance/owasp_mapping.py" = ["E501"]
# Attack-sequence database is a literal data table.
"src/prompt_shield/detectors/_d028_attack_sequences.py" = ["E501"]
# Built-in detectors embed long regex patterns and human-readable
# descriptions that are clearer on a single line than wrapped.
"src/prompt_shield/detectors/d0*.py" = ["E501"]
# Benchmarks print long report lines that are easier to read unwrapped,
# and embed multilingual / mathematical glyphs as legitimate test data.
"tests/benchmark_*.py" = ["E501", "RUF001", "RUF002", "RUF003"]
# Homoglyph normalization pipeline & tests use Cyrillic / fullwidth chars
# as the literal data being tested — flagging them is noise.
"src/prompt_shield/normalization/pipeline.py" = ["RUF001"]
"tests/normalization/test_pipeline.py" = ["RUF001", "RUF002", "RUF003"]
"tests/detectors/test_d031_language_enforcement.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
# Bumped from 3.10 to 3.12 so mypy can parse PEP 695 `type X = ...` syntax
# in numpy 2.x stubs (transitive dep via transformers). Project's runtime
# requirement remains `requires-python = ">=3.10"` — the CI test matrix on
# 3.10/3.11/3.12/3.13 catches any 3.12-only feature that sneaks into code.
python_version = "3.12"
strict = true
packages = ["prompt_shield"]
mypy_path = "src"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "prompt_shield.integrations.*",
    "prompt_shield.vault.*",
    "prompt_shield.detectors.d022_semantic_classifier",
]
disallow_any_generics = false
warn_return_any = false
disable_error_code = ["arg-type", "misc", "assignment", "return-value", "index", "list-item", "unused-ignore"]

# FastAPI handlers rely on response_model= for schema; return type annotations
# on each async def are boilerplate. Benchmarks/runner call into a loose
# `engine: object` parameter (PromptShieldEngine) that mypy can't narrow.
[[tool.mypy.overrides]]
module = [
    "prompt_shield.api",
    "prompt_shield.benchmarks.runner",
]
disable_error_code = ["no-untyped-def", "no-untyped-call"]

# crewai_tools exposes BaseTool differently between versions; our integration
# already gracefully falls back via try/except ImportError.
[[tool.mypy.overrides]]
module = ["crewai_tools", "crewai_tools.*"]
ignore_missing_imports = true
ignore_errors = true

# yaml ships as a separate types-PyYAML package; CI installs it via [dev,all]
# but contributor envs may not have it. d030 imports yaml — silence the
# missing-stub error in the importing module since it varies by env.
[[tool.mypy.overrides]]
module = ["prompt_shield.detectors.d030_custom_rules"]
disable_error_code = ["import-untyped", "unused-ignore"]

# haystack-ai and pydantic-ai are optional deps; their decorators aren't
# fully typed for our usage, and the internal factory functions build
# classes dynamically. Silence the resulting decorator/return-type noise.
[[tool.mypy.overrides]]
module = [
    "prompt_shield.integrations.haystack_component",
    "prompt_shield.integrations.pydantic_ai_guard",
]
disable_error_code = [
    "no-untyped-def",
    "no-untyped-call",
    "untyped-decorator",
    "assignment",
    "misc",
    "import-untyped",
    "unused-ignore",
]

# numpy 2.x stubs use PEP 695 `type X = ...` statements; we don't depend on
# numpy directly (transitive via transformers in [dev,all]). Skip its stubs
# defensively in case the mypy python_version bump above isn't enough.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "prompt_shield.config.*",
    "prompt_shield.persistence.*",
    "prompt_shield.feedback.*",
    "prompt_shield.registry",
]
disallow_any_generics = false
warn_return_any = false
disable_error_code = ["arg-type", "no-any-return", "type-arg", "return-value", "assignment", "import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=prompt_shield --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["prompt_shield"]
branch = true

[tool.coverage.report]
fail_under = 60
omit = [
    "src/prompt_shield/vault/*",
    "src/prompt_shield/integrations/django_middleware.py",
    "src/prompt_shield/integrations/flask_middleware.py",
    "src/prompt_shield/integrations/llamaindex_handler.py",
]
