[project]
name = "prompt-shield"
version = "0.4.1"
description = "Alias for prompt-shield-ai — install either name to get the same package."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "prompt-shield contributors" }]
keywords = ["llm", "security", "prompt-injection", "ai-safety", "firewall"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

dependencies = [
    "prompt-shield-ai==0.4.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
